--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,5 +35,27 @@ jobs:
         
       # run tests!
       - run: yarn test
+    deploy-job:
+       docker:
+         - image: my-image-version-tag
+       working_directory: /tmp/my-project
+       steps:
+         - run:
+             name: Deploy Master to Firebase
+             command: ./node_modules/.bin/firebase deploy --token=$FIREBASE_DEPLOY_TOKEN
+
+    workflows:
+      version: 2
+
+      -deploy:
+        jobs:
+          - build-job
+          - deploy-job:
+              requires:
+                - build-job
+              filters:
+                branches:
+                  only: master
+
 
 
