--- a/functions/.circleci/config.yml
+++ b/functions/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: ~/mern-starter
     docker:
-      - image: circleci/node:4.8.2
+      - image: circleci/node:8.11.3
       - image: mongo:3.4.4
     steps:
       - checkout
@@ -33,3 +33,24 @@ jobs:
           prefix: coverage
       - store_test_results:
           path: test-results.xml
+    deploy-job:
+       docker:
+         - image: my-image-version-tag
+       working_directory: /tmp/my-project
+       steps:
+         - run:
+             name: Deploy Master to Firebase
+             command: ./node_modules/.bin/firebase deploy --token=$FIREBASE_DEPLOY_TOKEN
+
+    workflows:
+      version: 2
+
+      -deploy:
+        jobs:
+          - build-job
+          - deploy-job:
+              requires:
+                - build-job
+              filters:
+                branches:
+                  only: master
