--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,9 @@
   },
   "devDependencies": {
     "eslint": "^4.12.0",
-    "eslint-plugin-promise": "^3.6.0"
+    "eslint-plugin-promise": "^3.6.0",
+    "firebase-functions-test": "^0.1.2",
+    "mocha": "^5.2.0"
   },
   "private": true
 }
