--- a/functions/.circleci/config.yml
+++ b/functions/.circleci/config.yml
@@ -19,9 +19,9 @@ jobs:
           key: dependency-cache-{{ checksum "package.json" }}
           paths:
             - ./node_modules
-      test:
-        override:
-         - true
+     test:
+       override:
+       - echo "test"
       - run:
           name: code-coverage
           command: './node_modules/.bin/nyc report --reporter=text-lcov'
