--- a/functions/.circleci/config.yml
+++ b/functions/.circleci/config.yml
@@ -20,19 +20,19 @@ jobs:
           paths:
             - ./node_modules
      test:
-       override:
-       - echo "test"
-      - run:
-          name: code-coverage
-          command: './node_modules/.bin/nyc report --reporter=text-lcov'
-      - store_artifacts:
-          path: test-results.xml
-          prefix: tests
-      - store_artifacts:
-          path: coverage
-          prefix: coverage
-      - store_test_results:
-          path: test-results.xml
+        override:
+        - echo "test"
+      // - run:
+      //     name: code-coverage
+      //     command: './node_modules/.bin/nyc report --reporter=text-lcov'
+      // - store_artifacts:
+      //     path: test-results.xml
+      //     prefix: tests
+      // - store_artifacts:
+      //     path: coverage
+      //     prefix: coverage
+      // - store_test_results:
+      //     path: test-results.xml
     deploy-job:
        docker:
          - image: my-image-version-tag
