--- a/functions/.circleci/config.yml
+++ b/functions/.circleci/config.yml
@@ -1,56 +1,34 @@
 version: 2
-jobs:
-  build:
-    working_directory: ~/mern-starter
-    docker:
+
+# The Firebase tools want a v6.x version of Node but Circle CI
+# defaults to v4.x. Set the latest LTS version.
+machine:
+  node:
       - image: circleci/node:8.11.3
       - image: mongo:3.4.4
-    steps:
-      - checkout
-      - run:
-          name: update-npm
-          command: 'sudo npm install -g npm@5'
-      - restore_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
-      - run:
-          name: install-npm-wee
-          command: npm install
-      - save_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
-          paths:
-            - ./node_modules
-    //  test:
-    //     override:
-    //     - echo "test"
-      // - run:
-      //     name: code-coverage
-      //     command: './node_modules/.bin/nyc report --reporter=text-lcov'
-      // - store_artifacts:
-      //     path: test-results.xml
-      //     prefix: tests
-      // - store_artifacts:
-      //     path: coverage
-      //     prefix: coverage
-      // - store_test_results:
-      //     path: test-results.xml
-    deploy-job:
-       docker:
-         - image: my-image-version-tag
-       working_directory: /tmp/my-project
-       steps:
-         - run:
-             name: Deploy Master to Firebase
-             command: ./node_modules/.bin/firebase deploy --token=$FIREBASE_DEPLOY_TOKEN
 
-    workflows:
-      version: 2
+# Need to install firebase-tools so that the deploy works
+dependencies:
+  pre:
+    - npm install -g firebase-tools
 
-      -deploy:
-        jobs:
-          - build-job
-          - deploy-job:
-              requires:
-                - build-job
-              filters:
-                branches:
-                  only: master
+# Need to tell Circle CI how to build the site
+compile:
+  override:
+    - bundle exec jekyll build --verbose
+
+# Circle CI expects some kind of testing to pass in order for the
+# build to be successful and deploy. Since you don't have tests
+# you can fake it by just returning true. http://gph.is/1MLPDWK
+test:
+  override:
+    - "true"
+
+# How you tell Circle to deploy to Firebase. The important thing to
+# note here is the FIREBASE_TOKEN env variable. See below.
+deployment:
+  production:
+    branch: master
+    commands:
+      - firebase use default
+      - firebase deploy --token=$FIREBASE_DEPLOY_TOKEN --non-interactive
