--- a/functions/package.json
+++ b/functions/package.json
@@ -7,8 +7,7 @@
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log",
-    "test": "mocha --reporter spec"
+    "logs": "firebase functions:log"
   },
   "dependencies": {
     "firebase-admin": "~5.12.1",
