--- a/functions/.circleci/config.yml
+++ b/functions/.circleci/config.yml
@@ -22,7 +22,7 @@ compile:
 # you can fake it by just returning true. http://gph.is/1MLPDWK
 test:
   override:
-    - "true"
+    - echo "test"
 
 # How you tell Circle to deploy to Firebase. The important thing to
 # note here is the FIREBASE_TOKEN env variable. See below.
