--- a/functions/.circleci/config.yml
+++ b/functions/.circleci/config.yml
@@ -1,31 +1,73 @@
-version: 2
+version: 2 # use CircleCI 2.0
+jobs: # a collection of steps
+  build: # runs not using Workflows must have a `build` job as entry point
+    working_directory: ~/mern-starter # directory where steps will run
+    docker: # run the steps with Docker
+      - image: circleci/node:4.8.2 # ...with this image as the primary container; this is where all `steps` will run
+      - image: mongo:3.4.4 # and this image as the secondary service container
+    steps: # a collection of executable commands 
+      - checkout # special step to check out source code to working directory
+      - run:
+          name: update-npm 
+          command: 'sudo npm install -g npm@latest'
+      - restore_cache: # special step to restore the dependency cache 
+          key: dependency-cache-{{ checksum "package.json" }}
+      - run:
+          name: install-npm-wee
+          command: npm install
+      - save_cache: # special step to save the dependency cache
+          key: dependency-cache-{{ checksum "package.json" }}
+          paths:
+            - ./node_modules
+      - run: # run tests
+          name: test
+          command: npm test
+      - run: # run coverage report
+          name: code-coverage
+          command: './node_modules/.bin/nyc report --reporter=text-lcov'
+      - store_artifacts: # special step to save test results as as artifact
+          path: test-results.xml
+          prefix: tests
+      - store_artifacts:
+          path: coverage
+          prefix: coverage
+      - store_test_results: # special step to upload test results for display in Test Summary
+          path: test-results.xml
+      # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples    
 
-# The Firebase tools want a v6.x version of Node but Circle CI
-# defaults to v4.x. Set the latest LTS version.
-machine:
-  node:
-      - image: circleci/node:8.11.3
-      - image: mongo:3.4.4
 
-# Need to install firebase-tools so that the deploy works
-dependencies:
-  pre:
-    - npm install -g firebase-tools
 
-# Need to tell Circle CI how to build the site
-compile:
-  override:
-    - bundle exec jekyll build --verbose
 
-# Circle CI expects some kind of testing to pass in order for the
-# build to be successful and deploy. Since you don't have tests
-# you can fake it by just returning true. http://gph.is/1MLPDWK
 
-# How you tell Circle to deploy to Firebase. The important thing to
-# note here is the FIREBASE_TOKEN env variable. See below.
-deployment:
-  production:
-    branch: master
-    commands:
-      - firebase use default
-      - firebase deploy --token=$FIREBASE_DEPLOY_TOKEN --non-interactive
+
+// version: 2
+
+// # The Firebase tools want a v6.x version of Node but Circle CI
+// # defaults to v4.x. Set the latest LTS version.
+// machine:
+//   node:
+//       - image: circleci/node:8.11.3
+//       - image: mongo:3.4.4
+
+// # Need to install firebase-tools so that the deploy works
+// dependencies:
+//   pre:
+//     - npm install -g firebase-tools
+
+// # Need to tell Circle CI how to build the site
+// compile:
+//   override:
+//     - bundle exec jekyll build --verbose
+
+// # Circle CI expects some kind of testing to pass in order for the
+// # build to be successful and deploy. Since you don't have tests
+// # you can fake it by just returning true. http://gph.is/1MLPDWK
+
+// # How you tell Circle to deploy to Firebase. The important thing to
+// # note here is the FIREBASE_TOKEN env variable. See below.
+// deployment:
+//   production:
+//     branch: master
+//     commands:
+//       - firebase use default
+//       - firebase deploy --token=$FIREBASE_DEPLOY_TOKEN --non-interactive
