--- a/functions/.circleci/config.yml
+++ b/functions/.circleci/config.yml
@@ -1,69 +1,58 @@
-version: 2 # use CircleCI 2.0
-jobs: # a collection of steps
-  build: # runs not using Workflows must have a `build` job as entry point
-    working_directory: ~/mern-starter # directory where steps will run
-    docker: # run the steps with Docker
-      - image: circleci/node:4.8.2 # ...with this image as the primary container; this is where all `steps` will run
-      - image: mongo:3.4.4 # and this image as the secondary service container
-    steps: # a collection of executable commands 
-      - checkout # special step to check out source code to working directory
+version: 2
+
+jobs:
+
+  build:
+    working_directory: ~/function
+    docker:
+      - image: circleci/node:10.6
+    steps:
+      # Checkout the code from the branch into the working_directory
+      - checkout
+      
+      #Log the current branch
       - run:
-          name: update-npm 
-          command: 'sudo npm install -g npm@latest'
-      - restore_cache: # special step to restore the dependency cache 
-          key: dependency-cache-{{ checksum "package.json" }}
-      - run:
-          name: install-npm-wee
-          command: npm install
-      - save_cache: # special step to save the dependency cache
-          key: dependency-cache-{{ checksum "package.json" }}
+          name: Show current branch
+          command: echo ${CIRCLE_BRANCH}
+   
+      # Cache the dist folder for the deploy job
+      - save_cache:
+          key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
           paths:
-            - ./node_modules
-        test:
-           override:
-    -       "false"
-      - run: # run coverage report
-          name: code-coverage
-          command: './node_modules/.bin/nyc report --reporter=text-lcov'
-      - store_artifacts: # special step to save test results as as artifact
-          path: test-results.xml
-          prefix: tests
-      - store_artifacts:
-          path: coverage
-          prefix: coverage
-      - store_test_results: # special step to upload test results for display in Test Summary
-          path: test-results.xml
-      # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples    
+            - dist
 
 
-# The Firebase tools want a v6.x version of Node but Circle CI
-# defaults to v4.x. Set the latest LTS version.
-machine:
-  node:
-    version: 6.10.3
+  #The deploy_to_firebase job
+  deploy:
+    working_directory: ~/src
 
-# Need to install firebase-tools so that the deploy works
-dependencies:
-  pre:
-    - npm install -g firebase-tools
+    docker:
+      - image: circleci/node:10.6
 
-# Need to tell Circle CI how to build the site
-compile:
-  override:
-    - bundle exec jekyll build --verbose
+    steps:
+      # Checkout the code from the branch into the working_directory
+      - checkout
 
-# Circle CI expects some kind of testing to pass in order for the
-# build to be successful and deploy. Since you don't have tests
-# you can fake it by just returning true. http://gph.is/1MLPDWK
-test:
-  override:
-    - "true"
+      # Log the current branch
+      - run:
+          name: Show current branch
+          command: echo ${CIRCLE_BRANCH}
 
-# How you tell Circle to deploy to Firebase. The important thing to
-# note here is the FIREBASE_TOKEN env variable. See below.
-deployment:
-  production:
-    branch: master
-    commands:
-      - firebase use default
-      - firebase deploy --token=$FIREBASE_TOKEN --non-interactive
+      - restore_cache:
+          key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
+            # Deploy to the S3 bucket corresponding to the current branch
+      - run:
+          name: Deploy to Firebase
+          command: |
+                 if [ "${CIRCLE_BRANCH}" == "master" ]; then
+                   echo "We don't have production environment"
+                 elif [ "${CIRCLE_BRANCH}" =! "master" ]; then
+                   ./node_modules/.bin/firebase deploy --only hosting -m INSTA-WEB-PRODUCTION-$(date +%Y%m%d-%H%M) --token=$FIREBASE_DEPLOY_TOKEN
+                 fi
+
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
+      - deploy
